--- a/Mobile/Mobile.iOS/Mobile.iOS.csproj
+++ b/Mobile/Mobile.iOS/Mobile.iOS.csproj
@@ -63,6 +63,12 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MobileHost|iPhoneSimulator'">
+    <OutputPath>bin\iPhoneSimulator\MobileHost\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MobileHost|iPhone'">
+    <OutputPath>bin\iPhone\MobileHost\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
