--- a/VoidDays.Contracts/VoidDays.Contracts.csproj
+++ b/VoidDays.Contracts/VoidDays.Contracts.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MobileHost|AnyCPU'">
+    <OutputPath>bin\MobileHost\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,11 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DayDTO.cs" />
+    <Compile Include="Data\GoalItemDTO.cs" />
     <Compile Include="Services\IVoidService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\" />
+    <ProjectReference Include="..\VoidDays.Core\VoidDays.Core.csproj">
+      <Project>{E5D75B3C-97E6-431F-A863-9244132E0F60}</Project>
+      <Name>VoidDays.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
