--- a/VoidDays/App.config
+++ b/VoidDays/App.config
@@ -42,7 +42,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://3.16.24.128:8733/Design_Time_Addresses/VoidDays.Services/VoidService"
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/VoidDays.Services/VoidService"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVoidService"
         contract="VoidDays.Contracts.Services.IVoidService" name="BasicHttpBinding_IVoidService" />
       <endpoint address="http://3.16.24.128:8733/Design_Time_Addresses/VoidDaysServerLibrary/VoidDaysLoginService"
