--- a/VoidDays/VoidDays.csproj
+++ b/VoidDays/VoidDays.csproj
@@ -60,6 +60,12 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MobileHost|AnyCPU'">
+    <OutputPath>bin\MobileHost\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MobileHost|x64'">
+    <OutputPath>bin\x64\MobileHost\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
@@ -186,6 +192,7 @@
     <Compile Include="Models\UnitOfWork.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserProfile.cs" />
+    <Compile Include="NewViewModels\CurrentDayViewModel.cs" />
     <Compile Include="Providers\VoidProvider.cs" />
     <Compile Include="Resources\Loading.xaml.cs">
       <DependentUpon>Loading.xaml</DependentUpon>
